--- a/src/main/resources/fxmls/MainController.fxml
+++ b/src/main/resources/fxmls/MainController.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
@@ -16,8 +17,10 @@
    <children>
       <Pane fx:id="mainPane" prefHeight="534.0" prefWidth="511.0">
          <children>
-            <Label fx:id="freeSpaceLabel" layoutX="35.0" layoutY="29.0" text="free space" />
-            <Label fx:id="totalSpaceLabel" layoutX="132.0" layoutY="29.0" text="total space" />
+            <Label fx:id="freeSpaceLabel" layoutX="21.0" layoutY="6.0" text="free space" />
+            <Label fx:id="totalSpaceLabel" layoutX="123.0" layoutY="6.0" text="total space" />
+            <ListView fx:id="leftDisplay" layoutX="23.0" layoutY="43.0" prefHeight="439.0" prefWidth="205.0" />
+            <ListView fx:id="rightDisplay" layoutX="256.0" layoutY="48.0" prefHeight="439.0" prefWidth="205.0" />
          </children></Pane>
    </children>
 </GridPane>
