--- a/src/main/resources/fxmls/MainController.fxml
+++ b/src/main/resources/fxmls/MainController.fxml
@@ -17,14 +17,21 @@
          <children>
             <TableView fx:id="leftDisplay" layoutX="-7.0" layoutY="100.0" onKeyPressed="#keyPressed" prefHeight="798.0" prefWidth="954.0" />
             <TableView fx:id="rightDisplay" layoutX="961.0" layoutY="100.0" onKeyPressed="#keyPressed" prefHeight="798.0" prefWidth="954.0" />
-            <ComboBox fx:id="driveSelect" layoutX="14.0" layoutY="57.0" prefHeight="25.0" prefWidth="58.0" />
-            <Label fx:id="hddSpaceInfo" layoutX="92.0" layoutY="61.0" prefHeight="17.0" prefWidth="431.0" text="hddSpaceLabel">
+            <ComboBox fx:id="driveSelectLeft" layoutX="14.0" layoutY="57.0" prefHeight="25.0" prefWidth="58.0" />
+            <Label fx:id="hddSpaceInfoLeft" layoutX="92.0" layoutY="61.0" prefHeight="17.0" prefWidth="431.0" text="hddSpaceLabel">
                <font>
                   <Font name="System Bold" size="10.0" />
                </font></Label>
             <Button fx:id="viewButton" layoutX="17.0" layoutY="950.0" mnemonicParsing="false" text="F3 View" />
             <Button fx:id="editButton" layoutX="92.0" layoutY="950.0" mnemonicParsing="false" onAction="#openEditor" text="F4 Edit" />
-            <Label fx:id="currentPathLeftDisplayLabel" alignment="CENTER_RIGHT" layoutX="-7.0" layoutY="915.0" prefHeight="25.0" prefWidth="954.0" text="currentPath" />
+            <Label fx:id="currentActiveDisplayPath" alignment="CENTER_RIGHT" layoutX="-7.0" layoutY="915.0" prefHeight="25.0" prefWidth="954.0" text="currentPath" />
+            <Button fx:id="copyButton" layoutX="163.0" layoutY="950.0" mnemonicParsing="false" onAction="#copyFile" text="F5 Copy" />
+            <Label fx:id="hddSpaceInfoRight" layoutX="1055.0" layoutY="61.0" prefHeight="17.0" prefWidth="431.0" text="hddSpaceLabel">
+               <font>
+                  <Font name="System Bold" size="10.0" />
+               </font>
+            </Label>
+            <ComboBox fx:id="driveSelectRight" layoutX="980.0" layoutY="57.0" prefHeight="25.0" prefWidth="58.0" />
          </children></Pane>
    </children>
 </GridPane>
